feat(code): se explica la logica para programa en el README y se ajustan los endpoints
